<resources>
    <string name="app_name">SmartCoffee</string>
    <string name="select">Выберите продукт</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantity">Количество</string>
    <string name="pickup">Доставка</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="order_cancellation">Отмена заказа</string>
    <string name="pickup_date">Дата доставки</string>
    <string name="coffee">Кофе</string>
    <string name="ice">Мороженое</string>
    <string name="cocktail">Лимонад</string>
    <string name="cake">Торт</string>
    <string name="choose_quantity_cocktail">Ваш выбор лимонад</string>
    <string name="choose_quantity_cake">Ваш выбор торт</string>
    <string name="choose_quantity_coffee">Ваш выбор кофе</string>
    <string name="choose_quantity_ice">Ваш выбор мороженное</string>
    <string name="product">Товар</string>
    <string name="date">Дата доставки</string>
    <string name="send">Отправить заказ</string>
    <string name="Next">Итоговый выбор</string>

</resources>