<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="cakeFragment"
            type="com.hfad.smartcoffee.CakeFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CakeFragment">

        <ImageView
            android:id="@+id/imProduct"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:src="@drawable/cake"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/quantity"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/btnQuantityOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:textAllCaps="false" />

        <Button
            android:id="@+id/btnQuantityOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> cakeFragment.goToNextScreen()}"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/one"
            app:backgroundTint="#EA4242"
            app:layout_constraintBottom_toTopOf="@+id/btnQuantityTwo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnQuantityTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> cakeFragment.goToNextScreen()}"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/two"
            app:backgroundTint="#EA4242"
            app:layout_constraintBottom_toTopOf="@+id/btnQuantityTree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnQuantityTree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> cakeFragment.goToNextScreen()}"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/three"
            app:backgroundTint="#EA4242"
            app:layout_constraintBottom_toTopOf="@+id/btnOrderCancellation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnOrderCancellation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/order_cancellation"
            app:backgroundTint="#42A7EA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>